* fix getTestScene test